Fixes small layout problem for the Paragraph Menu

--- a/style.less
+++ b/style.less
@@ -279,7 +279,7 @@ abbr[data-original-title] {
     left: 0px;
 
     .button {
-        width: 55px;
+        width: 60px;
         height: 20px;
         opacity: 0.3;
         background-color: gray;
